@@ -1,3 +1,8 @@
+Thu Apr 10 11:53:57 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* boot.c: Don't include varargs.h.
+ 	(set_mach_stack_args): Use stdarg instead of vararg.
+
 Thu Sep 12 16:28:47 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
 
 	* Makefile (HURDLIBS): New variable.
